# meds2text

./: README.md  pyproject.toml
apps/timeline_viewer/: app.py
docs/: markup.md
meds2text/: textify.py
meds2text/ontology/: athena.py
scripts/: event_linearization.py  init_athena_ontologies.py
src/meds2text/: textify.py
src/meds2text/ontology/: __init__.py  athena.py  core.py
src/meds2text/transforms/: core.py
tests/: test_athena_ontologies.py
